# panel

./: .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  openpanel-roadmap.md
.github/workflows/: release.yml
openpanel-server/: Cargo.toml  build.rs
openpanel-server/migrations/: 001_initial.sql  002_perf_and_preferences.sql  003_update_channel_and_guest.sql  004_anilist_metadata.sql
openpanel-server/src/: anilist.rs  cache.rs  config.rs  error.rs  main.rs  scanner.rs  state.rs
openpanel-server/src/api/: admin.rs  library.rs  mod.rs  profile.rs  reader.rs
openpanel-server/src/db/: mod.rs  models.rs
openpanel-server/src/zip/: index.rs  mod.rs
openpanel-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
openpanel-ui/public/: __root.tsx  manifest.json
openpanel-ui/src/: routeTree.gen.ts  router.tsx  styles.css
openpanel-ui/src/components/: command-palette.tsx  home-page.tsx  layout.tsx  theme-provider.tsx
openpanel-ui/src/lib/: anilist.ts  api.ts  download-store.ts  downloads.ts  store.ts
openpanel-ui/src/routes/: __root.tsx  admin.tsx  downloads.tsx  index.tsx  (+3 more)
openpanel-web/: package.json
openpanel-web/src/: routeTree.gen.ts  router.tsx  styles.css
read-server/: Cargo.toml  build.rs
read-server/migrations/: 002_perf_and_preferences.sql
read-server/src/: main.rs  scanner.rs
read-swift/: Package.swift
read-swift/OpenPanel.xcodeproj/: project.pbxproj
read-ui/: index.html
scripts/: install-updater.ps1  install-updater.sh  openpanel-updater.ps1  openpanel-updater.sh  panel-updater.ps1
(+44 files in other folders)
