[package]
name = "openpanel-server"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "compression-gzip", "compression-br", "set-header"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
flate2 = "1"
lru = "0.12"
sha2 = "0.10"
bcrypt = "0.16"
uuid = { version = "1", features = ["v4"] }
natord = "1.0"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
walkdir = "2"
hex = "0.4"
regex = "1"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", features = ["json"] }
